Modifying sonar properties file correcting paths

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,14 +6,14 @@ sonar.projectVersion=1.0.0
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src/main/java
 #sonar.tests=src/test/java
-sonar.java.binaries= build/classes
-sonar.libraries=build/libs/*
+sonar.java.binaries= target/classes
+sonar.libraries=target/*.jar
 
 # Language
 sonar.language=java
 
-sonar.junit.reportsPath=build/test-results
-sonar.jacoco.reportPaths=build/jacoco/test.exec
+sonar.junit.reportsPath=target/test-results
+sonar.jacoco.reportPaths=target/jacoco/test.exec
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
