--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>apache-httpcomponents-client-4-api</artifactId>
             <version>4.5.5-2.0</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.jenkins-ci.tools</groupId>-->
+<!--            <artifactId>maven-hpi-plugin</artifactId>-->
+<!--            <version>3.5</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>structs</artifactId>
