AR-90: Added unit tests

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Required metadata
-sonar.projectKey=artifactor-plugin
-sonar.projectName=Artifactori Jenkins PLugin
+sonar.projectKey=artifactz-plugin
+sonar.projectName=Artifactz.io Jenkins Plugin
 sonar.projectVersion=1.0.0
 
 # Comma-separated paths to directories with sources (required)
@@ -12,8 +12,9 @@ sonar.libraries=target/*.jar
 # Language
 sonar.language=java
 
-sonar.junit.reportsPath=target/test-results
-sonar.jacoco.reportPaths=target/jacoco/test.exec
+sonar.junit.reportsPath=target/surefire-reports/
+sonar.java.coveragePlugin=jacoco
+sonar.coverage.jacoco.xmlReportsPath=target/site/jacoco/jacoco.xml
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
