--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
         <relativePath />
     </parent>
     <groupId>io.iktech.jenkins.plugins</groupId>
-    <artifactId>artifactor-plugin</artifactId>
+    <artifactId>artifactz-plugin</artifactId>
     <version>1.1.0-SNAPSHOT</version>
-    <name>Artifactor Plugin</name>
-    <description>This plugin communicates with Artifactor Web Service</description>
-    <url>https://jenkins.io/doc/book/pipeline/syntax/#scripted-pipeline</url>
+    <name>Artifactz.io Plugin</name>
+    <description>This plugin allows to exchange artifact details between pipeline or freestyle project Artifactorz.io Web Service</description>
+    <url>https://artifactz.io</url>
     <packaging>hpi</packaging>
     <licenses>
         <license>
