--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
         <version>3.43</version>
         <relativePath />
     </parent>
-    <groupId>io.iktech.jenkins.plugins</groupId>
-    <artifactId>artifactz-plugin</artifactId>
+    <groupId>io.jenkins.plugins</groupId>
+    <artifactId>artifactz</artifactId>
     <version>1.1.0-SNAPSHOT</version>
     <name>Artifactz.io Plugin</name>
     <description>This plugin allows to exchange artifact details between pipeline or freestyle project Artifactorz.io Web Service</description>
