--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -7,10 +7,13 @@ on:
     types:
       - completed
 
+permissions:
+  checks: read
+  contents: write
+
 jobs:
   maven-cd:
     uses: jenkins-infra/github-reusable-workflows/.github/workflows/maven-cd.yml@v1
     secrets:
       MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
       MAVEN_TOKEN: ${{ secrets.MAVEN_TOKEN }}
-
