--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <!-- Dependency versions -->
-        <jenkins.version>2.361.4</jenkins.version>
-        <revision>1.2.1</revision>
+        <jenkins.version>2.462.3</jenkins.version>
+        <revision>1.3.1</revision>
         <changelist>999999-SNAPSHOT</changelist>
     </properties>
     <dependencies>
@@ -57,12 +57,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.15.2</version>
+            <version>2.18.2</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.15.2</version>
+            <version>2.18.2</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
@@ -134,7 +134,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.11.0</version>
+            <version>2.14.0</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -172,8 +172,8 @@
         <dependencies>
             <dependency>
                 <groupId>io.jenkins.tools.bom</groupId>
-                <artifactId>bom-2.361.x</artifactId>
-                <version>1836.vfe602c266c05</version>
+                <artifactId>bom-2.462.x</artifactId>
+                <version>4051.v78dce3ce8b_d6</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
